# ublox_fake_rust

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  QUICK_START.md  README.md  TODO.md  analyze_packets.py  build.rs  memory.x  ublox_fake.uf2  ublox_fake_rp2350.uf2  ublox_fake_rp2354.uf2
.cargo/: config.toml
docs/: UBX_COMMANDS_REFERENCE.md  rp2350_uart_pinout.md  мануал.txt
logs_air3/: gnss.csv  gnss_2.csv  gnss_3.csv  после нашей платы dma (не работает).csv  после нашей платы dma 2 (не работает).csv  после нашей платы dma 3 (не работает).csv  после нашей платы в режиме автоопределния спуфинга(2 режим).csv
logs_analiser/: decode_cfgkey.py  decode_config.py  decode_mini5.py  decoder--251226-214226.txt  decoder--251226-214226_2.txt  mavic4_ansdrone_decoder--251229-151141.txt  mavic4_merged_ubx.txt  mavic4_settimgs_2-251229-151141.txt  mavic4_settimgs_decoder--251229-151141.txt  mavic4_ответы_2350.txt  merge_mini5_logs.py  mini5_config_messages.txt  mini5_decoded_messages.txt  mini5_full_config.txt  mini5_merged_ubx.txt  mini5_set_decoder--251227-192129.txt  выход_реального_юблокс.csv  после включения.csv  после включения_10.csv  после включения_2.csv  после включения_3.csv  после включения_4.csv  после включения_5.csv  после включения_6.csv  после включения_7.csv  после включения_8.csv  после включения_9.csv  после обработки платой (синий режим).txt  с юблокса.txt  только_настроечные_сообщения.csv
src/: config.rs  coordinates.rs  flash_storage.rs  led.rs  main.rs  main.rs.bak  passthrough.rs  pio_uart_dma.rs  sec_sign.rs  spoof_detector.rs  ws2812.pio
src/ubx/: messages.rs  mod.rs  parser.rs
