[package]
name = "ublox_fake"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "u-blox GNSS M8/M10 emulator for RP2040/RP2350"

[dependencies]
# Embassy async runtime for RP2040 (latest versions)
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.9", features = ["defmt", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.7" }
embassy-futures = { version = "0.1" }

# Cortex-M runtime
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

# Panic handling
panic-probe = { version = "1.0", features = ["print-defmt"] }

# Logging
defmt = "1.0"
defmt-rtt = "1.1"

# Crypto for SEC-SIGN (ECDSA SECP192R1)
sha2 = { version = "0.10", default-features = false }
# p192 for ECDSA (pure Rust, manual signing implementation)
p192 = { version = "0.13", default-features = false, features = ["arithmetic"] }
# For RFC6979 deterministic k
hmac = { version = "0.12", default-features = false }
# For constant-time operations
subtle = { version = "2.5", default-features = false }

# Heapless collections (no_std)
heapless = "0.9"

# Math functions for no_std (sqrt, fabs, etc.)
libm = "0.2"

# Static cell for multicore
static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }

# PIO and fixed-point for WS2812
pio = "0.3"
fixed = "1.29"
fixed-macro = "1.2"
smart-leds = "0.4"

# Async IO traits (must match embassy-rp version)
embedded-io-async = "0.6"

# Direct register access for baudrate change
rp-pac = { version = "7", features = ["rp235x"] }

[features]
default = ["rp2350"]
rp2040 = ["embassy-rp/rp2040"]
rp2350 = ["embassy-rp/rp235xa", "embassy-rp/imagedef-secure-exe"]
rp2354 = ["rp2350"]  # RP2354 uses same HAL as RP2350, different pin config

[profile.dev]
debug = 2
opt-level = 1

[profile.release]
debug = 2
lto = true
opt-level = "z"       # Maximum size optimization (was "s")
codegen-units = 1     # Better optimization, slower build

# Speed-optimize crypto crates (ECDSA is ~700ms with "z", measured ~59ms with "3")
[profile.release.package.p192]
opt-level = 3

[profile.release.package.sha2]
opt-level = 3

[profile.release.package.hmac]
opt-level = 3

[profile.release.package.subtle]
opt-level = 3

[profile.release.package.crypto-bigint]
opt-level = 3

[profile.release.package.elliptic-curve]
opt-level = 3

[profile.release.package.primeorder]
opt-level = 3

[profile.release.package.ff]
opt-level = 3

[profile.release.package.group]
opt-level = 3

[profile.release.package.digest]
opt-level = 3

[profile.release.package.block-buffer]
opt-level = 3

[[bin]]
name = "ublox_fake"
path = "src/main.rs"
